--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.udacity.asteroidradar.main.MainFragment"
-        android:label="fragment_main"
+        android:label="Asteroid Radar"
         tools:layout="@layout/fragment_main" >
         <action
             android:id="@+id/action_showDetail"
@@ -17,12 +17,12 @@
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.udacity.asteroidradar.detail.DetailFragment"
-        android:label="fragment_detail"
+        android:label="Asteroid Radar"
         tools:layout="@layout/fragment_detail">
 
         <argument
             android:name="selectedAsteroid"
-            app:argType="com.udacity.asteroidradar.Asteroid"/>
+            app:argType="com.udacity.asteroidradar.data.Asteroid"/>
     </fragment>
 
 </navigation>
