--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -47,10 +47,12 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        style="@style/AppTheme.AppSubTitle"
                         android:text="@string/close_approach_data_title"
                         android:textColor="@color/default_text_color" />
 
                     <TextView
+                        style="@style/AppTheme.AppSubTitleValue"
                         android:id="@+id/close_approach_date"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -74,12 +76,14 @@
                         android:orientation="vertical">
 
                         <TextView
+                            style="@style/AppTheme.AppSubTitle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/absolute_magnitude_title"
                             android:textColor="@color/default_text_color" />
 
                         <TextView
+                            style="@style/AppTheme.AppSubTitleValue"
                             android:id="@+id/absolute_magnitude"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -99,6 +103,7 @@
                 </LinearLayout>
 
                 <TextView
+                    style="@style/AppTheme.AppSubTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -106,6 +111,7 @@
                     android:textColor="@color/default_text_color" />
 
                 <TextView
+                    style="@style/AppTheme.AppSubTitleValue"
                     android:id="@+id/estimated_diameter"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -115,6 +121,7 @@
                     tools:text="0.82 km" />
 
                 <TextView
+                    style="@style/AppTheme.AppSubTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -122,6 +129,7 @@
                     android:textColor="@color/default_text_color" />
 
                 <TextView
+                    style="@style/AppTheme.AppSubTitleValue"
                     android:id="@+id/relative_velocity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -131,6 +139,7 @@
                     tools:text="11.9 km/s" />
 
                 <TextView
+                    style="@style/AppTheme.AppSubTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -138,6 +147,7 @@
                     android:textColor="@color/default_text_color" />
 
                 <TextView
+                    style="@style/AppTheme.AppSubTitleValue"
                     android:id="@+id/distance_from_earth"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
