--- a/app/src/main/res/layout/list_item_asteroid.xml
+++ b/app/src/main/res/layout/list_item_asteroid.xml
@@ -20,11 +20,10 @@
         >
 
         <TextView
+            style="@style/AppTheme.AppSubTitle"
             android:id="@+id/asteroid_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
             android:text="@{asteroid.codename}"
             android:textColor="@color/default_text_color"
@@ -32,11 +31,10 @@
             />
 
         <TextView
+            style="@style/AppTheme.AppSubTitleValue"
             android:id="@+id/asteroid_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textStyle="bold"
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/asteroid_title"
             android:text="@{asteroid.closeApproachDate}"
