--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -28,6 +28,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
+                android:contentDescription="@string/this_is_nasa_s_picture_of_day_showing_nothing_yet"
                 app:srcCompat="@drawable/placeholder_picture_of_day"/>
 
             <TextView
@@ -38,6 +39,7 @@
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:textSize="20sp"
+                android:contentDescription="@string/content_description_image_of_the_day_title"
                 android:layout_gravity="bottom"
                 android:background="#55010613"
                 android:text="@string/image_of_the_day" />
